not totally working get mute words

--- a/public/index.html.ejs
+++ b/public/index.html.ejs
@@ -4,12 +4,17 @@
     <script src="/htmx-ext-ws-1.6.9.js"></script>
   </head>
   <body>
-  <div hx-ext="ws" ws-connect="wss://<%= process.env.WEBSOCKET_DOMAIN %>">
-    <div id="content">
-      <form id="form" ws-send>
-          <input type="submit" name="authorize" value="Login"/>
-      </form>
+    <div hx-ext="ws" ws-connect="wss://<%= process.env.WEBSOCKET_DOMAIN %>">
+      <div id="content">
+        <form id="form" ws-send>
+            <input type="submit" name="authorize" value="Login"/>
+        </form>
+      </div>
+      <div>
+        <form id="ping-form" ws-send hx-trigger="every 60s">
+          <input type="hidden" name="ping" value="true"/>
+        </form>
+      </div>
     </div>
-</div>
   </body>
 </html>
