--- a/public/index.html.ejs
+++ b/public/index.html.ejs
@@ -1,12 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Mutebot Control Panel</title>
     <script src="/htmx-1.6.9.min.js"></script>
     <script src="/htmx-ext-ws-1.6.9.js"></script>
   </head>
   <body>
     <div hx-ext="ws" ws-connect="wss://<%= process.env.WEBSOCKET_DOMAIN %>">
       <div id="content">
-        <form id="form" ws-send>
+        <form id="form" ws-send hx-trigger="submit throttle:30s">
             <input type="submit" name="authorize" value="Login"/>
         </form>
       </div>
